--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_chat_types: ^3.6.2
   flutter_chat_ui:
     path: ../
+  flutter_screenutil: ^5.9.0
+  flutter_svg: ^2.0.9
   http: '>=0.13.6 <2.0.0'
   image_picker: ^1.0.0
   intl: ^0.18.1
